# tbmsd

./: .gitignore  README.md  pyproject.toml
examples/: approx_precision.py  calc_coco_metrics.py  calc_dota_coco_metrics.py  calc_dota_split_coco_merics.py  calibrate.py  check_sizes.py  example.py  multi_scale_example.py  patch_model.py  patch_val.py  predict_aerial_dataset.py  predict_and_eval.py  predict_and_visualize.py  predict_dataset.py  predict_dota_dataset.py  predict_multi_dota_dataset.py  segm_to_det.py  vis_map_diff.py  vis_sizes_map.py
tests/: test_gluing.py  test_merge.py
yolo_patch_fusion/: model.py  predictor.py  wrapper.py
yolo_patch_fusion/evaluation/: coco.py  convert.py  eval_yolo.py  metrics.py  nms.py
yolo_patch_fusion/model/: calibrator.py  model.py  multi_scale_model.py  predictor.py  tasks.py  validator.py  wrapper.py
yolo_patch_fusion/prediction/: predict.py
yolo_patch_fusion/trainning/: split_dota.py  train.py  val.py
