[tool.poetry]
name = "yolo-patch-fusion"
version = "0.1.0"
description = ""
authors = ["SanchoPanso"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <4"
ultralytics = "^8.3.55"
shapely = "^2.0.6"
pytest = "^8.3.4"
pycocotools = "^2.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
